--- a/이진수.md
+++ b/이진수.md
@@ -12,21 +12,21 @@
 
    덧셈의 경우 간단히 2가되는 순간 다음으로 올리면서 하면 된다.
 
-   01100100 = 100
-
-   01001011 = 75
-
-   10101111 = 175
+   > 01100100 = 100
+>
+   > 01001011 = 75
+>
+   > 10101111 = 175
 
 2. 100 - 75
 
    뺄셈의 경우 윗자리 수를 받아내려올 때 2씩 받아내려온다는 규칙을 지키면 뺼셈이 가능하다.
 
-   01100100 = 100
-
-   01001011 = 75
-
-   00011001 = 25
+   > 01100100 = 100
+>
+   > 01001011 = 75
+>
+   > 00011001 = 25
 
 3. 100 +(-75)
 
@@ -35,11 +35,43 @@
    * 75의 보수는 1의 보수를 먼저 한뒤에 1을 더하면 된다. 여기서 1의 보수는 숫자를 반전시키는것이다. 01001011 => 10110100 + 1 => 10110101
    * 그다음 100에 덧셈을 한뒤 가장 큰 자릿수를 빼면 된다.
 
-   001100100 = 100
+   > 001100100 = 100
+>
+   > 010110101 = +(-75)
+>
+   > ~1~00011001 = 25
 
-   010110101 = +(-75)
-
-   ~1~00011001 = 25
 
 
+컴퓨터에서의 2의 보수
 
+컴퓨터(CPU)를 구성하는 가장 중요한 요소는 레지스터와 ALU인데, 정수형 처리는 ALU에서 이루어진다. CPU의 비트수 제한으로 인해 이진법 계산의 적용에서 비트를 벗어나면 버리게 된다.
+
+
+
+C프로그래밍 언어에서 2의 보수
+
+```c
+char chr;
+chr = -3;
+chr += 4;
+int inum = -7;
+```
+
+여기서 char는 8비트 정수형 변수이다. 정수형인데 unsigned 키워드를 사용하지 않았으므로 부호를갖는 정수형 변수이다. -3은 컴파일러가 다음과 같이 이진수로 바꾸어 기계어 코드와 결합 한다.
+
+> 00000011 = 3
+>
+> 11111101 = (3의 1의 보수 + 1)
+>
+> 11111101 = -3
+
+C언어에서 -3까지의 이진수 변환은 컴파일러가 한다. CPU내부에서 3을 -3으로 변환하는 것이 아니다. chr += 4; 연산은 ALU에서 하는데, 다음과 같이 이진수로 나타낼 수 있다.
+
+> 11111101 = -3
+>
+> 00000100 = 4
+>
+> ~1~00000001 = 1
+
+여기 9자릿수의 1은 버리고 8비트만 레지스터에 저장 한다. 이렇게 ALU을 계산할 때, 8자리에서 9자리로 넘어가는 이진수를 Carry라고 하고 CPU 레지스터 중에 Flag 레지스터에 저장하여 올림이 되었는가를 저장 한다. 결국 최종 계산 값은 00000001이 된다.
