Heap_BST 층별순회 수정 OSI 7계층

--- a/자료구조.md
+++ b/자료구조.md
@@ -1,17 +1,17 @@
 ##### C 기본자료형
 
-| 자료형        | 키워드   | 메모리 크기 | 기억 범위                                                    |
-| ------------- | -------- | ----------- | ------------------------------------------------------------ |
-| 문자          | char     | 1byte       | -128 ~ 127                                                   |
-| 정수          | short    | 2byte       | -32,768 ~ 32,767                                             |
-| 정수          | int      | 4byte       | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 |
-| 정수          | long     | 4byte       | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 |
-| 부호없는 문자 | unsigned | 1byte       | 0 ~ 255                                                      |
-| 부호없는 정수 | unsigned | 2byte       | 0 ~ 65,535                                                   |
-| 부호없는 정수 | unsigned | 4byte       | 0 ~ 4,294,967,295                                            |
-| 부호없는 정수 | unsigned | 4byte       | 0 ~ 4,294,967,295                                            |
-| 실수          | float    | 4byte       | 1.2E-38 ~ 3.4E38                                             |
-| 실수          | double   | 8byte       | 2.2E-308 ~ 1.8E308                                           |
+| 자료형        | 키워드         | 메모리 크기 | 기억 범위                                                    |
+| ------------- | -------------- | ----------- | ------------------------------------------------------------ |
+| 문자          | char           | 1byte       | -128 ~ 127                                                   |
+| 정수          | short          | 2byte       | -32,768 ~ 32,767                                             |
+| 정수          | int            | 4byte       | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 |
+| 정수          | long           | 4byte       | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 |
+| 부호없는 문자 | unsigned char  | 1byte       | 0 ~ 255                                                      |
+| 부호없는 정수 | unsigned short | 2byte       | 0 ~ 65,535                                                   |
+| 부호없는 정수 | unsigned int   | 4byte       | 0 ~ 4,294,967,295                                            |
+| 부호없는 정수 | unsigned long  | 4byte       | 0 ~ 4,294,967,295                                            |
+| 실수          | float          | 4byte       | 1.2E-38 ~ 3.4E38                                             |
+| 실수          | double         | 8byte       | 2.2E-308 ~ 1.8E308                                           |
 
 
 
@@ -78,8 +78,3 @@
 * 트리 - 뿌리와 뿌리 또는 다른 꼭짓점을 단 하나의 부모로 갖는 꼭짓점들로 이루어진 구조, 부모 자식 관계는 변으로 표현된다.
   * 이진 트리 - 자식이 최대 두개인 트리
   * 힙 - 이진 트리의 일종으로 이진트리에 어떤 특성을 부여한 것 (MIN, MAX)
-
-
-
-
-
