자료구조 기본자료형 2의제곱표현추가

--- a/자료구조.md
+++ b/자료구조.md
@@ -3,15 +3,18 @@
 | 자료형        | 키워드         | 메모리 크기 | 기억 범위                                                    |
 | ------------- | -------------- | ----------- | ------------------------------------------------------------ |
 | 문자          | char           | 1byte       | -128 ~ 127                                                   |
-| 정수          | short          | 2byte       | -32,768 ~ 32,767                                             |
-| 정수          | int            | 4byte       | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 |
-| 정수          | long           | 4byte       | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 |
-| 부호없는 문자 | unsigned char  | 1byte       | 0 ~ 255                                                      |
-| 부호없는 정수 | unsigned short | 2byte       | 0 ~ 65,535                                                   |
-| 부호없는 정수 | unsigned int   | 4byte       | 0 ~ 4,294,967,295                                            |
-| 부호없는 정수 | unsigned long  | 4byte       | 0 ~ 4,294,967,295                                            |
+| 정수          | short          | 2byte       | -32,768 ~ 32,767 (-2^15 ~ 2^15-1)                            |
+| 정수          | int            | 4byte       | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 (-2^31 ~ 2 ^31-1) |
+| 정수          | long           | 4byte       | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 (-2^31 ~ 2 ^31-1) |
+| 정수          | long long      | 8byte       | (-2^63 ~ 2^63-1)                                             |
+| 부호없는 문자 | unsigned char  | 1byte       | 0 ~ 255 (0 ~ 2^8-1)                                          |
+| 부호없는 정수 | unsigned short | 2byte       | 0 ~ 65,535 (0 ~ 2^16-1)                                      |
+| 부호없는 정수 | unsigned int   | 4byte       | 0 ~ 4,294,967,295 (0 ~ 2^32-1)                               |
+| 부호없는 정수 | unsigned long  | 4byte       | 0 ~ 4,294,967,295 (0 ~ 2^32-1)                               |
 | 실수          | float          | 4byte       | 1.2E-38 ~ 3.4E38                                             |
 | 실수          | double         | 8byte       | 2.2E-308 ~ 1.8E308                                           |
+
+
 
 
 
@@ -19,11 +22,11 @@
 
 | 자료형 | 키워드  | 메모리크기 | 기억 범위                                                    |
 | ------ | ------- | ---------- | ------------------------------------------------------------ |
-| 문자   | char    | 2byte      | 0 ~ 65,535                                                   |
-| 정수   | byte    | 1byte      | -128 ~ 127                                                   |
-| 정수   | short   | 2byte      | -32,768 ~ 32767                                              |
-| 정수   | int     | 4byte      | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 |
-| 정수   | long    | 8byte      | 9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807        |
+| 문자   | char    | 2byte      | 0 ~ 65,535 (0 ~ 2^16-1)                                      |
+| 정수   | byte    | 1byte      | -128 ~ 127 (-2^7 ~ 2^7-1)                                    |
+| 정수   | short   | 2byte      | -32,768 ~ 32767 ( -2^15 ~ 2^15-1)                            |
+| 정수   | int     | 4byte      | -2,147,483,648![img](http://contents.e-campus.co.kr/vmc/6455/02/images/blank.gif)~ 2,147,483,647 (-2^31 ~ 2^31-1) |
+| 정수   | long    | 8byte      | 9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807 ( -2^63 ~ 2^63-1) |
 | 실수   | float   | 4byte      | 1.4x10^-45 ~ 3.4X10^38                                       |
 | 실수   | double  | 8byte      | 4.9X10^-324 ~ 1.8X10^308                                     |
 | 논리   | boolean | 1byte      | true or false                                                |
