Network 서브넷마스크 오류수정

--- a/자료구조.md
+++ b/자료구조.md
@@ -70,7 +70,7 @@
 ##### 연결리스트
 
 * 각 노드가 데이터와 포인터를 가지고 한 줄로 연결되어 있는 방식으로 데이터를 저장하는 자료 구조이다.
-* 늘어선 노드의 중간지점에서 자료의 추가와 삭제가 O(1)이다.
+* 늘어선 노드의 중간지점에서 자료의 추가와 삭제가 O(1)이다. (하지만 위치를 찾는데 O(n)의 시간이 필요함)
 * 배열이나 트리구조와 달리 특정 위치의 데이터를 검색하기 위해서 O(n)의 시간이 필요하다.
 
 
